kubernetes/services/base/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: hands-on/gateway
        imagePullPolicy: Never
        ports:
        - containerPort: 8443
        resources:
          limits:
            memory: 350Mi
        # livenessProbe:
        #   httpGet:
        #     scheme: HTTPS
        #     path: /actuator/info
        #     port: 8443
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 20
        #   successThreshold: 1
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTPS
        #     path: /actuator/info
        #     port: 8443
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 3
        #   successThreshold: 1
---

apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 443
      nodePort: 31443
      targetPort: 8443
