kubernetes/services/base/product-composite.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-composite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-composite
  template:
    metadata:
      labels:
        app: product-composite
    spec:
      containers:
      - name: comp
        image: hands-on/product-composite-service
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     memory: 350Mi
        # livenessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /actuator/info
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 20
        #   successThreshold: 1
        # readinessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /actuator/health
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 3
        #   successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: product-composite
spec:
  selector:
    app: product-composite
  ports:
    - port: 80
      targetPort: 80
