kubernetes/services/base/product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: pro
        image: hands-on/product-service
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        # livenessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /actuator/info
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 20
        #   successThreshold: 1
        # readinessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /actuator/health
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 3
        #   successThreshold: 1
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config-repo
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo-product
---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 80
