kubernetes/services/base/review.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
      - name: rev
        image: hands-on/review-service
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        # livenessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /actuator/info
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 20
        #   successThreshold: 1
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /actuator/health
        #     port: 80
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 2
        #   failureThreshold: 3
        #   successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: review
spec:
  selector:
    app: review
  ports:
    - port: 80
      targetPort: 80
